--- a/Servic1/templates/home.html
+++ b/Servic1/templates/home.html
@@ -23,19 +23,31 @@
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
               <td>КабачокCoin</td>
-              <td>1000</td>
+              <td>
+                <form method="GET">
+                  <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
+                </form>
+              </td>
             </tr>
           </a>
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
               <td>Shkrecsil</td>
-              <td>500</td>
+              <td>
+                <form method="GET">
+                  <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
+                </form>
+              </td>
             </tr>
           </a>
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
               <td>Shpiling</td>
-              <td>100</td>
+              <td>
+                <form method="GET">
+                  <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
+                </form>
+              </td>
             </tr>
           </a>
         </tbody>
