--- a/Servic1/templates/profile.html
+++ b/Servic1/templates/profile.html
@@ -16,8 +16,8 @@
         </a>
   
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-          <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная страница</a>
-          <a class="me-3 py-2 text-dark text-decoration-none" href="/user">Войти в аккаунт</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="/home">Главная страница</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="/lk">Ваш id</a>
         </nav>
       </div>
     {% block body %}{% endblock %}
