--- a/Servic1/templates/create-user.html
+++ b/Servic1/templates/create-user.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Криптообменник Gift{% endblock %}
+{% block title %}Криптообменник Кабачок{% endblock %}
 
 {% block body %}
 <div class ="container text-center mt-5">
