--- a/Servic1/templates/basehome.html
+++ b/Servic1/templates/basehome.html
@@ -14,10 +14,10 @@
         <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
           <span class="fs-4">Криптообменник Кабачок</span>
         </a>
-  
+
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-          <a class="me-3 py-2 text-dark text-decoration-none" href="/home">Главная страница</a>
-          <a class="me-3 py-2 text-dark text-decoration-none" href="/lk">Личный кабинет</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="/">Главная страница</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="/user">Личный кабинет</a>
         </nav>
       </div>
     {% block body %}{% endblock %}
