--- a/Servic1/templates/home.html
+++ b/Servic1/templates/home.html
@@ -17,12 +17,14 @@
           <tr>
             <th scope="col">Название</th>
             <th scope="col">Цена(USD)</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
               <td>КабачокCoin</td>
+              <td></td>
               <td>
                 <form method="GET">
                   <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
@@ -33,6 +35,7 @@
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
               <td>Shkrecsil</td>
+              <td></td>
               <td>
                 <form method="GET">
                   <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
@@ -43,6 +46,7 @@
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
               <td>Shpiling</td>
+              <td></td>
               <td>
                 <form method="GET">
                   <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
