--- a/Servic1/templates/index.html
+++ b/Servic1/templates/index.html
@@ -3,50 +3,5 @@
 {% block title %}Криптообменник Кабачок{% endblock %}
 
 {% block body %}
-
-<div class="container-fluid">
-
-  <div class="container row">
-    
-    <canvas class="my-4 w-100 chartjs-render-monitor" id="myChart" width="1043" height="440" style="display: block; width: 1043px; height: 440px;"></canvas>
-
-    <h2>Криптаволюта</h2>
-    <div class="container table-responsive">
-      <table class="table table-striped table-sm">
-        <thead>
-          <tr>
-            <th scope="col">Название</th>
-            <th scope="col">Цена(USD)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <a class="me-3 py-2 text-dark text-decoration-none">
-            <tr>
-              <td>КабачокCoin</td>
-              <td>1000</td>
-            </tr>
-          </a>
-          <a class="me-3 py-2 text-dark text-decoration-none">
-            <tr>
-              <td>Shkrecsil</td>
-              <td>500</td>
-            </tr>
-          </a>
-          <a class="me-3 py-2 text-dark text-decoration-none">
-            <tr>
-              <td>Shpiling</td>
-              <td>100</td>
-            </tr>
-          </a>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-    
-    
-    
-      
-    
-
+Рассказ о криптоволюте КабачокCoin
 {% endblock %}
