--- a/Servic1/templates/profile.html
+++ b/Servic1/templates/profile.html
@@ -17,7 +17,7 @@
   
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
           <a class="me-3 py-2 text-dark text-decoration-none" href="/home">Главная страница</a>
-          <a class="me-3 py-2 text-dark text-decoration-none" href="/lk">Личный кабинет</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="/personal-cabinet">Личный кабинет</a>
         </nav>
       </div>
     {% block body %}{% endblock %}
