--- a/Servic1/templates/personal-cabinet.html
+++ b/Servic1/templates/personal-cabinet.html
@@ -16,6 +16,7 @@
             <th scope="col"></th>
           </tr>
         </thead>
+        
         <tbody>
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
@@ -52,7 +53,7 @@
               <td></td>
               <td>
                 <form method="GET">
-                  <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
+                  <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" href="/personal-cabinet?url=127.0.0.1:8777">Узнать цену</button>
                 </form>
               </td>
             </tr>
