--- a/Servic1/templates/personal-cabinet.html
+++ b/Servic1/templates/personal-cabinet.html
@@ -6,13 +6,10 @@
 <h2>Криптаволюта</h2>
     <div class="container table-responsive">
       <table class="table table-striped table-sm">
-          <p>Ваш баланс USD: {{r}}</p>
           <tr>
             <th scope="col">Название</th>
-            <th scope="col">КолиечствоЦена(USD)</th>
-            <th scope="col">Цена(USD)</th>
+            <th scope="col">Колиечство</th>
             <th scope="col">Обменять</th>
-            <th scope="col">Узнать цену</th>
           </tr>
         </thead>
         
@@ -21,11 +18,9 @@
             <tr>
               <td>КабачокCoin</td>
               <td></td>
-              <td></td>
-              <td>{{course}}</td>
               <td>
                 <form method="GET">
-                  <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button>
+                  <a class="w-100 btn btn-lg btn-primary mt-3" href="/КабачокCoin?url=127.0.0.1:8777" type="submit">Обменять</a>
                 </form>
               </td>
             </tr>
@@ -34,26 +29,31 @@
             <tr>
               <td>BTC</td>
               <td></td>
-              <td>{{course}}</td>
-              <form method="GET">
-                <td>{{course}}</td>
-                <td><button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Узнать цену</button></td>
-              </form>
+              <td>
+                <form method="GET">
+                  <a class="w-100 btn btn-lg btn-primary mt-3" type="submit" href="/BTC?url=127.0.0.1:8777">Обменять</a>
+                </form>
+              </td>
             </tr>
           </a>
           <a class="me-3 py-2 text-dark text-decoration-none">
             <tr>
               <td>ETH</td>
               <td></td>
-              <td></td>
-              <td>{{course}}</td>
               <td>
                 <form method="GET">
-                  <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" href="/personal-cabinet?url=127.0.0.1:8777">Узнать цену</button>
+                  <a class="w-100 btn btn-lg btn-primary mt-3" type="submit" href="/ETH?url=127.0.0.1:8777">Обменять</a>
                 </form>
               </td>
             </tr>
           </a>
+          <a class="me-3 py-2 text-dark text-decoration-none">
+              <tr>
+                <td>USD</td>
+                <td></td>
+                <td></td>
+              </tr>
+            </a>
         </tbody>
       </table>
     </div>
