--- a/Servic1/templates/КабачокCoin.html
+++ b/Servic1/templates/КабачокCoin.html
@@ -13,7 +13,7 @@
                     <td>Продать</td>
                     <td>
                     <form method="GET">
-                        <a class="w-100 btn btn-lg btn-primary mt-3" href="/personal-cabinet?url=127.0.0.1:8777" type="submit">Узнать цену</a>
+                        <a class="w-100 btn btn-lg btn-primary mt-3" href="/127.0.0.1:8777?url=127.0.0.1:8777" type="submit">Узнать цену</a>
                     </form>
                     </td>
                 </tr>
