--- a/Servic1/templates/КабачокCoin.html
+++ b/Servic1/templates/КабачокCoin.html
@@ -11,9 +11,21 @@
                     <td>КабачокCoin</td>
                     <td>Купить</td>
                     <td>Продать</td>
+                    <td>Цена</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <input accept="text"></input>
+                    </td>
+                    <td>
+                        <input accept="text"></input>
+                    </td>
+                    <td>{{course}}</td>
                     <td>
                     <form method="GET">
-                        <a class="w-100 btn btn-lg btn-primary mt-3" href="/127.0.0.1:8777?url=127.0.0.1:8777" type="submit">Узнать цену</a>
+                        <a class="w-100 btn btn-lg btn-primary mt-3" href="/КабачокCoin?url=127.0.0.1:8777" type="submit">Узнать цену</a>
                     </form>
                     </td>
                 </tr>
